# CareOps

./: .env.docker  .env.production.example  .gitignore  docker-compose.yml  todo
backend/: .env.example  Dockerfile  SERVICES.md  alembic.ini  check_imports.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0208900c8c5f_other_tables.py  074bc5736e30_add_booking_contact_form_and_.py  0c26f13be2dc_merge_heads.py  1e9ce8d5a92e_create_users_table.py  22c62598916f_initial_tables.py  25ed27b2cf1d_migration_3.py  26f780e25636_contacts_conversation_bookings.py  2712932d9b39_add_oauth_and_security_fields.py  2e45f4c32532_initial_communication_tables.py  423b41df52c5_add_email_verification_password_reset_.py  47c6f9c7323b_added_dashboard.py  4fe1b76204b3_create_users_table.py  50899b2922af_migration_5.py  56fd328989c3_fixed_some_stuff.py  582fda9d8dba_migration_3.py  5eb35fbb5fde_add_integrations_contacts_conversations.py  798e9e9eadb6_other_tables.py  9aed409e2283_initial_migration.py  a72c2580e2a8_merge_heads.py  add_automation.py  add_calendar_integration.py  add_gmail_integration.py  add_leads_tables.py  add_message_is_read.py  add_vendor_email.py  b43a64d69fe0_fixing.py  b5f5e0eba1f0_merge_heads.py  b9df07dfbc9e_merge_heads.py  d0f406be640b_initial_communication_tables.py  dc9bb57e5328_add_source_to_contacts.py  e8fa8e7c634b_fixing.py  fa84cbfee96e_fixing.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/core/: errors.py
backend/app/models/: __init__.py  automation.py  booking.py  calendar_integration.py  contact.py  (+13 more)
(+149 files in other folders)
